<resources>
    <string name="app_name">Seminar01</string>
    <string name="welcome">Welcome to SDM</string>
    <string name="dynamic_int">Dynamic text assigned by code (int)</string>
    <string name="dynamic_string">Dynamic text assigned by code (String)</string>
    <string name="onclick_code">onClickListener by code</string>
    <string name="onclick_layout">onClickListener from layout</string>
    <string name="button">Button 1 clicked!</string>
    <string name="button2">Button 2 clicked!</string>
    <string name="tv_second_activity">Welcome to the second activity!</string>
    <string name="welcome2">Welcome to the second activity, %1$s</string>
    <string name="button3">Implicit intent</string>
    <string name="result">Come back soon!</string>
</resources>
